--- a/revisitingArrays/README.org
+++ b/revisitingArrays/README.org
@@ -92,3 +92,52 @@ step back, you'll realise you probably do this /a lot/.
   You should be familiar with the generics syntax [[https://quii.gitbook.io/learn-go-with-tests/go-fundamentals/generics][from the previous chapter]], try
   and write your own ~Reduce~ function and use it inside ~Sum~ and
   ~SumAllTails~.
+
+* Fold/reduce are pretty universal
+  The possibilities are endless™️ with ~Reduce~ (or ~Fold~). It's a common
+  pattern for a reason, it's not just for arithmetic or string
+  concatenation. Try a few other applications.
+  - Why not mix some ~color.RGBA~ into a single colour?
+  - Total up the number of votes in a poll, or items in a shopping basket.
+  - More or less anything involving processing a list.
+
+* Wrapping up
+  When done tastefully, higher-order functions like these will make your code
+  simpler to read and maintain, but remember the rule of thumb:
+
+  Use the TDD process to drive out real, specific behaviour that you actually
+  need, in the refactoring stage you then /might/ discover some useful
+  abstractions to help tidy the code up.
+
+  Practice combining TDD with good source control habits. Commit your work when
+  your test is passing, /before/ trying to refactor. This way if you make a
+  mess, you can easily get yourself back to your working state.
+
+** Names matter
+   Make an effort to do some research outside of Go, so you don't re-invent
+   patterns that already exist with an already established name.
+
+   Writing a function takes a collection of ~A~ and converts them to ~B~? Don't
+   call it ~Convert~, that's ~Map~. Using the "proper" name for these items will
+   reduce the cognitive burden for others and make it more search engine
+   friendly to learn more.
+
+** This doesn't feel idiomatic?
+   Try to have an open-mind.
+
+   Whilst the idioms of Go won't, and shouldn't /radically/ change due to
+   generics being released, the idioms /will/ change - due to the language
+   changing! This should not be a controversial point.
+
+   Saying
+   #+BEGIN_QUOTE
+   This is not idiomatic
+   #+END_QUOTE
+
+   Without any more detail, is not an actionable, or useful thing to
+   say. Especially when discussing new language features.
+
+   Discuss with your colleagues patterns and style of code based on their merits
+   rather than dogma. So long as you have well-designed tests, you'll always be
+   able to refactor and shift things as you understand what works well for you,
+   and your team.
