Minor addition to scaling acceptance tests

--- a/scalingAcceptance/README.org
+++ b/scalingAcceptance/README.org
@@ -171,3 +171,14 @@ like unit tests; they require more thought and different practices.
   inappropriate coupling; rather than the reverse of being overly abstract.
 
   We can use this specification to verify any "system" that can ~Greet~.
+
+** First system: HTTP API
+   We require to provide a "greeter service" over HTTP. So we'll need to create:
+   1. A *driver*. In this case, one works with an HTTP system by using an
+      *HTTP client*. This code will know how to work with our API. Drivers
+      translate DSLs into system-specific calls; in our case, the driver will
+      implement the interface specifications define.
+   2. An *HTTP server* with a greet API
+   3. A *test*, which is responsible for managing the life-cycle of spinning up
+      the server and then plugging the driver into the specification to run it
+      as a test
