got stacks working with integers

--- a/PracticePrograms/dataStructures/README.org
+++ b/PracticePrograms/dataStructures/README.org
@@ -1,1 +1,4 @@
 #+TITLE: Data Structures
+
+This is just program that builds out some simple data structures like stacks,
+queues, and linked lists.
