--- a/scalingAcceptance/README.org
+++ b/scalingAcceptance/README.org
@@ -241,3 +241,88 @@ like unit tests; they require more thought and different practices.
    #+begin_src bash
      go test -short ./...
    #+end_src
+
+** When should I write acceptance tests?
+   The best practice is to favour having lots of fast running unit tests and a
+   few acceptance tests, but how do you decide when you should write an
+   acceptance test, vs unit tests?
+
+   It's difficult to give a concrete rule, but the questions I typically ask
+   myself are:
+   - Is this an edge case? I'd prefer to unit test those.
+   - Is this something that the non-computer people talk about a lot? I would
+     prefer to have a lot of confidence the key thing "really" works, so I'd add
+     an acceptance test.
+   - Am I describing a user journey, rather than a specific function? Acceptance
+     test.
+   - Would unit tests give me enough confidence? Sometimes you're taking an
+     existing journey that already has an acceptance test, but you're adding
+     other functionality to deal with different scenarios due to different
+     inputs. In this case, adding another acceptance test adds a cost but brings
+     little value, so I'd prefer some unit tests.
+
+* Wrapping up
+  Building systems with a reasonable cost of change requires you to have ATs
+  engineered to help you, not become a maintenance burden. They can be used as a
+  means of guiding, or as a GOOS says, "growing" your software methodically.
+
+  Hopefully, with this example, you can see our application's predictable,
+  structured workflow for driving change and how you could use it for your work.
+
+  You can imagine talking to a stakeholder who wants to extend the system you
+  work on in some way. Capture it in a domain-centric, implementation-agnostic
+  way in a specification, and use it as a north star towards your efforts. Riya
+  and I describe leveraging BDD techniques like "Example Mapping"
+  [[https://www.youtube.com/watch?v=ZMWJCk_0WrY][in our GopherconUK talk]] to help you understand the essential complexity more
+  deeply and allow you to write more detailed and meaningful specifications.
+
+  Separating essential and accidental complexity concerns will make your work
+  less ad-hoc and more structured and deliberate; this ensures the resiliency of
+  your acceptance tests and helps them become less of a maintenance burden.
+
+  Dave Farley gives an excellent tip:
+  #+BEGIN_QUOTE
+  Imagine the least technical person that you can think of, who understands the
+  problem-domain, reading your Acceptance Tests. The tests should make sense to
+  that person.
+  #+END_QUOTE
+
+  Specifications should then double up as documentation. They should specify
+  clearly how a system should behave. This idea is the principle around tools
+  like [[https://cucumber.io/][Cucumber]], which offers you a DSL for capturing behaviours as code, and
+  then you convert that DSL into system calls, just like we did here.
+
+** What has been covered
+   - Writing abstract specifications allows you to express the essential
+     complexity of the problem you're solving and remove accidental
+     complexity. This will enable you to reuse the specifications in different
+     contexts.
+   - How to use [[https://golang.testcontainers.org/][Testcontainers]] to manage the life-cycle of your system for
+     ATs. This allows you to thoroughly test the image you intend to ship on
+     your computer, giving you fast feedback and confidence.
+   - A brief intro into containerising your application with Docker.
+   - gRPC.
+   - Rather than chasing canned folder structures, you can use your development
+     approach to naturally drive out the structure of your application, based on
+     your own needs.
+
+** Further material
+   - In this example, our "DSL" is not much of a DSL; we just used interfaces to
+     decouple our specification from the real world and allow us to express
+     domain logic cleanly. As your system grows, this level of abstraction might
+     become clumsy and unclear. [[https://cucumber.io/blog/bdd/understanding-screenplay-(part-1)/][Read into the "Screenplay Pattern"]] if you want
+     to find more ideas as to how to structure your specifications.
+   - For emphasis, [[http://www.growing-object-oriented-software.com/][Growing Object-Oriented Software, Guided by Tests]], is a
+     classic. It demonstrates applying this "London style", "top-down" approach
+     to writing software. Anyone who has enjoyed Learn Go with Tests should get
+     much value from reading GOOS.
+   - [[https://github.com/quii/go-specs-greet][In the example code repository]], there's more code and ideas I haven't
+     written about here, such as multi-stage docker build, you may wish to check
+     this out.
+     - In particular, /for fun/, I made a *third program*, a website with some
+       HTML forms to ~Greet~ and ~Curse~. The ~Driver~ leverages the
+       excellent-looking https://github.com/go-rod/rod module, which allows it
+       to work with the website with a browser, just like a user would. Looking
+       at the git history, you can see how I started not using any templating
+       tools "just to make it work" Then, once I passed my acceptance test, I
+       had the freedom to do so without fear of breaking things. -->
