--- a/README.org
+++ b/README.org
@@ -33,8 +33,24 @@ https://quii.gitbook.io/learn-go-with-tests/ and have been loving it.
 * Testing Fundamentals
   - 1. :: [[./acceptanceTests/README.org][Introduction to acceptance tests]]
   - 2. :: [[./scalingAcceptance/README.org][Scaling acceptance tests]]
+  - 3. :: [[./workingWithoutMocks/README.org][Working without mocks]]
+  - 4. :: [[./refactoringChecklist/README.org][Refactoring checklist]]
 
 * Build an Application
+  Now that you have hopefully digested the Go Fundamentals section you have a
+  solid grounding of a majority of Go's language features and how to do TDD.
+
+  This next section will involve building an application.
+
+  Each chapter will iterate on the previous one, expanding the application's
+  functionality as our product owner dictates.
+
+  New concepts will be introduced to help facilitate writing great code but most
+  of the new material will be learning what can be accomplished from Go's
+  standard library.
+
+  By the end of this, you should have a strong grasp as to how to iteratively
+  write an application in Go, backed by tests.
   - 1. :: [[./httpServer/README.org][HTTP server]]
 
 * Practice programs
