--- a/WorkingWithConcurrency/README.org
+++ b/WorkingWithConcurrency/README.org
@@ -14,6 +14,7 @@ through the "[[https://www.udemy.com/course/working-with-concurrency-in-go-golan
   - 6. :: [[./simple-channels/][Simple introduction to Channels]]
   - 7. :: [[./channel-select][Select Example]]
   - 8. :: [[./buffered-channels/][Buffered Channels]]
+  - 9. :: [[./sleeping-barber/][Sleeping Barber Problem]]
 
 * Notes:
   In go every single program even a simple little hello world program has at
