--- a/README.org
+++ b/README.org
@@ -60,5 +60,6 @@ https://quii.gitbook.io/learn-go-with-tests/ and have been loving it.
 * Other courses
   I also have worked through a couple of Udemy courses on Go and I have included
   my notes on those:
-  - 1. :: [[./WorkingWithConcurrency/README.org][Working with Concurrency in Go]]
-  - 2. :: [[./Microservices/README.org][Working with Microservices in Go]]
+  - 1. :: [[./IntroToTesting/README.org][Introduction to Testing in Go]]
+  - 2. :: [[./WorkingWithConcurrency/README.org][Working with Concurrency in Go]]
+  - 3. :: [[./Microservices/README.org][Working with Microservices in Go]]
